# speller

./: Cargo.toml  LICENSE.Apache  LICENSE.MIT  README.md  alphabets.toml
src/: main.rs
