[package]
name = "speller"
description = "CLI tool for phonetic spelling"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Francesco Farina"]
readme = "README.md"
repository = "https://github.com/francescofarina/speller"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1"
unicode-segmentation = "1.11"
